thermod (1.0.0~beta13-4) unstable; urgency=medium

  * Change munin plugin

 -- Simone Rossetto <simros85@gmail.com>  Mon, 25 Sep 2017 14:45:44 +0200

thermod (1.0.0~beta13-3) unstable; urgency=medium

  * Update

 -- Simone Rossetto <simros85@gmail.com>  Sun, 24 Sep 2017 13:41:45 +0200

thermod (1.0.0~beta13-2) unstable; urgency=medium

  * Fix postinst script for thermod

 -- Simone Rossetto <simros85@gmail.com>  Fri, 14 Jul 2017 16:23:15 +0200

thermod (1.0.0~beta13-1) unstable; urgency=medium

  * Change Debian postinst script to add thermod user to specific groups
  * Remove fixed colour for status in Munin plugin

 -- Simone Rossetto <simros85@gmail.com>  Fri, 14 Jul 2017 15:28:31 +0200

thermod (1.0.0~beta12-4) unstable; urgency=medium

  * Fix wrong path for timetable.json in main conf file
  * Add python3-rpi.gpio in suggested packages for armel, armhf and arm64

 -- Simone Rossetto <simros85@gmail.com>  Wed, 12 Jul 2017 15:21:33 +0200

thermod (1.0.0~beta12-3) unstable; urgency=medium

  * Add package graphviz to build depends.

 -- Simone Rossetto <simros85@gmail.com>  Fri, 23 Jun 2017 09:48:56 +0200

thermod (1.0.0~beta12-2) unstable; urgency=medium

  * Add install scripts for thermod-monitor-buttonled

 -- Simone Rossetto <simros85@gmail.com>  Thu, 25 May 2017 12:46:36 +0200

thermod (1.0.0~beta12-1) unstable; urgency=medium

  * Initial release.

 -- Simone Rossetto <simros85@gmail.com>  Sun, 24 May 2017 15:55:22 +0200