@@ -10,13 +10,12 @@ Build-Depends:
  dh-systemd (>=1.5),
  python3-all,
  python3-setuptools,
- python3-daemon (>=2.0.5),
  python3-jsonschema (>=2.3.0),
  python3-lockfile (>=0.12.2),
  python3-aiohttp (>=1.2.0),
  python3-numpy (>=1.8.0),
- python3-requests (>=2.4.3),
  python3-nose (>=1.3.4),
+ python3-requests (>=2.4.3),
  graphviz,
  doxygen,
  doxypy
