@@ -50,7 +50,7 @@ scale = celsius
 # reference temperatures whereas the second the corresponding values read by
 # the thermometer. Thermod will use these two lists to compute a transformation
 # function to calibrate the thermometer. The two lists must have the same number
-# of elements and must have at least 6 elements each.
+# of elements and must have at least 2 elements each (better with 6 elements).
 # To disable the calibration or to get the values for `t_raw` list, leave
 # `t_raw` itself empty.
 t_ref = 15.0, 17.0, 18.0, 19.0, 20.0, 21.0, 23.0
@@ -60,6 +60,11 @@ t_raw =
 # Comma-separated list of AnalogZero A/D channels to read temperature from.
 # Required only if `thermometer` setting is set to PiAnalogZero.
 channels = 0, 1, 2
+
+# Standard deviation between temperatures to consider a thermometer broken.
+# Required only if `thermometer` setting is set to PiAnalogZero.
+# Change it only if you know what you are doing!
+stddev = 2.0
 
 [socket]
 # Host and port where to bind the control socket. Leave `host` empty if you
