@@ -37,8 +37,7 @@ setup(name='thermod',
       license = 'GPL-3.0+',
       packages=['thermod'],
       scripts=['bin/thermod'],
-      install_requires=['python-daemon >= 2.0.5',
-                        'jsonschema >= 2.3.0',
+      install_requires=['jsonschema >= 2.3.0',
                         'lockfile >= 0.12.2',
                         'aiohttp >= 1.2.0',
                         'numpy >= 1.8.0'],
